# sthyb

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
data_prep/: prepare_ba_lesiones.py  prepare_crime_data.py  prepare_poa_crime.py
docs/: RESULTS.md  method_guardia.md  method_hybrids.md
scripts/: run_probabilistic.py  run_spatial_diag.py  train_gwavenet.py  train_stgcn.py  train_sthsl.py
sthyb/: config.py
sthyb/eval/: metrics.py  plotting.py  probabilistic.py  spatial_diag.py
sthyb/hybrid/: glm.py  guardia.py  predictive.py  star.py  transforms.py
sthyb/models/: base_model.py  infer.py  layers.py  tester.py  trainer.py
sthyb/utils/: math_graph.py  math_utils.py
tests/: test_math.py
tests/fixtures/: golden_smoke_poa_stgcn_als.csv
