[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sthyb"
version = "0.1.0"
description = "Spatio-temporal hybrid residual correction for crime forecasting"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["sthyb*"]
